--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,2 +1,10 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+
+blockquote.centered {
+    text-align: center;
+}
+
+hr.short {
+    width: 25%;
+}
