--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-blockquote.centered{
+[epub|type~="z3998:verse"].centered{
 	text-align: center;
 }
 
