--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -4,6 +4,9 @@
 [epub|type~="z3998:verse"].centered{
 	text-align: center;
 }
+[epub|type~="z3998:verse"].centered p, [epub|type~="z3998:verse"].centered span {
+	text-indent: 0;
+}
 
 hr.short{
 	width: 25%;
