Run se clean again.
Closes #2

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -4,7 +4,9 @@
 [epub|type~="z3998:verse"].centered{
 	text-align: center;
 }
-[epub|type~="z3998:verse"].centered p, [epub|type~="z3998:verse"].centered span {
+
+[epub|type~="z3998:verse"].centered p,
+[epub|type~="z3998:verse"].centered span{
 	text-indent: 0;
 }
 
